--- a/docs/source/refs.bib
+++ b/docs/source/refs.bib
@@ -42,6 +42,6 @@
 
 @article{Calogero2023,
   year = {submitted},
-  author = {Gaetano Calogero and Domenica Raciti and Pablo Acosta-Alba and Fuccio Cristiano and Ioannis Deretzis and Giuseppe Fisicaro and Karim Huet and S{\'{e}}bastien Kerdil{\`{e}}s and Alberto Sciuto and Antonino La Magna},
-  title = {Multiscale modeling of ultrafast melting phenomena},
+  author = {Gaetano Calogero and Domenica Raciti and Damiano Ricciarelli and Pablo Acosta-Alba and Fuccio Cristiano and Richard Daubriac and Remi Demoulin and Ioannis Deretzis and Giuseppe Fisicaro and Jean-Michel Hartmann and S{\'{e}}bastien Kerdil{\`{e}}s and Antonino La Magna},
+  title = {Atomistic insights into ultrafast SiGe nanoprocessing},
 }
