Added example on SiGe:B with provisional calibration.

--- a/examples/ex5-CVD-IO/CVD-Calibration/calibration_CVD_Si_DCS+H2+HCl.ipynb
+++ b/examples/ex5-CVD-IO/CVD-Calibration/calibration_CVD_Si_DCS+H2+HCl.ipynb
@@ -1135,7 +1135,7 @@
    ],
    "source": [
     "execpath = os.getcwd()+'/mulskips-source' # Put mulskips-source in current directory\n",
-    "lenx, leny, lenz = 240, 240, 760 # Box size\n",
+    "lenx, leny, lenz = 240, 240, 760 # Box size --> KMC super-lattice units (0.543/12 nm)\n",
     "setuprun.setup_mulskips_src(execpath, lenx, leny, lenz) # it will rerecompile if needed"
    ]
   },
