minor update in analyze.py

--- a/examples/ex5-CVD-IO/CVD-Calibration/calibration_CVD_Si_DCS+H2+HCl.ipynb
+++ b/examples/ex5-CVD-IO/CVD-Calibration/calibration_CVD_Si_DCS+H2+HCl.ipynb
@@ -2818,9 +2818,9 @@
     "        \n",
     "        ## Analysis of epitaxial-growth substrate quality and defects\n",
     "        gr_KMC[experiment][iT] = analyze.analyze_growth_rate(runpath, bin_size=5.0, \\\n",
-    "                                surface_roughness=10.0, plotting=True, savepng=True, \\\n",
+    "                                surface_roughness=10.0, plotting=True, figname='fig-{}'.format(experiment), \\\n",
     "                                Nexclude=2, method='polyfit')\n",
-    "        data = analyze.analyze_coverage(runpath, plotting=True, savepng=True, Nexclude=2, mp=cvdclass)\n",
+    "        data = analyze.analyze_coverage(runpath, plotting=True, figname='fig-{}'.format(experiment), Nexclude=2, mp=cvdclass)\n",
     "        thCl_KMC[experiment][iT] = data['Cl']\n",
     "        thH_KMC[experiment][iT] = data['H']"
    ]
